# receipts-processor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt  setup_project.py
.github/workflows/: ci.yml  security.yml
agent/: AGENT_CHARTER.md  EVAL_CHECKLIST.md  FAILURE_HANDLING.md  GUARDRAILS.md  HUMAN_APPROVAL_POLICY.md  PROMPT_PROTOCOL.md  README.md  RISK_REGISTER.md
configs/: README.md  app.yaml  extraction_rules.yaml  risk_controls.yaml
data/: README.md
docs/: ARCHITECTURE.md  CHANGELOG.md  CODEX_LOG.md  DECISIONS.md  INIT_PROMPT.txt  OPERATIONS.md  PRD.md  README.md
models/: README.md  example.csv  example.xlsx  model.csv  model.xlsx
scripts/: redact_codex_log.py
src/: README.md
src/receipt_processor/: cli.py  (+5 more)
src/receipt_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  test_cli.py  test_detailed_json_output.py  test_env_loader.py  test_exporter.py  test_extraction_parsing.py  test_file_discovery.py  test_gui_manual_selection.py  test_interface_options.py  test_llm_config.py  test_llm_orchestrator.py  test_llm_review_assist.py  test_llm_runtime_overrides.py  test_model_contract_pipeline.py  test_notes_and_flags.py  test_ocr_router_pdf_fallback.py  test_pipeline_llm_integration.py  test_review_resolution.py  test_risk_controls_and_exceptions.py  test_runtime_logger.py  test_schema_mapping.py  test_statement_sanitizer.py  test_structured_extraction_and_processing.py  test_template_and_validation.py  test_template_renderer.py  test_transaction_type.py
(+46 files in other folders)
