[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-processor"
version = "0.1.0"
description = "Receipt ingestion and expense export pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "pypdf>=4.2.0",
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "typer>=0.12.0",
  "pydantic>=2.7.0"
]

[project.scripts]
receipt-processor = "receipt_processor.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
